# medical-chart-system-public

./: .gitignore  README.md  docker-compose.example.yml  env.example
medical-chart-backend/: Dockerfile  Dockerfile_local  alembic.ini  pyproject.toml
medical-chart-backend/alembic/: env.py
medical-chart-backend/alembic/versions/: 20250424_create_initial_medical_chart_schema.py  20250425_update_chart_process_status_enum.py  20250501_add_ai_agent_review_to_charts.py  20250517_create_extraction_template_system.py  20250623_add_similarity_thresholds_to_template_items.py
medical-chart-backend/app/: main.py
medical-chart-backend/app/core/: auth.py  config.py  dependencies.py
medical-chart-backend/app/db/: database.py  models.py  session.py
medical-chart-backend/app/routers/: charts.py  review.py  templates.py
medical-chart-backend/app/schemas/: chart.py  template.py
medical-chart-backend/app/services/: __init__.py  chart_service.py  db_service.py  gcs_service.py  gemini_service.py  similarity_service.py  template_service.py
medical-chart-backend/app/tasks/: process_chart.py
medical-chart-backend/tests/: conftest.py  pytest.ini  test_e2e_api_workflows.py  test_e2e_data_consistency.py  test_e2e_report_generator.py  test_level1_extraction_service_pytest.py  test_level1_similarity_service.py  test_level1_template_service.py  test_level2_api_integration.py  test_level2_database_integration.py  test_level2_report_generator.py  test_level2_service_integration.py
medical-chart-backend/tests/reports/: level1_unit_test_report_20250602.md  (+2 more)
(+40 files in other folders)
