[tool.poetry]
name = "medical-chart-backend"
version = "0.1.0"
description = "FastAPI backend for medical chart extraction system"
authors = ["fumifumi0831 <tonahuma77@gmail.com>"]
packages = [
    {include = "app"}
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
python-multipart = "^0.0.6"
google-cloud-storage = "^2.13.0"
google-cloud-aiplatform = "^1.36.4"
google-cloud-secret-manager = "^2.16.4"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
httpx = "^0.25.0"
uuid = "^1.30"
asyncio = "^3.4.3"
google-generativeai = "^0.3.2"
rapidfuzz = "^3.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.10.1"
flake8 = "^6.1.0"
mypy = "^1.6.1"
isort = "^5.12.0"
pip-audit = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
